Fix ticket alignment due to bold text

--- a/src/index.scss
+++ b/src/index.scss
@@ -874,6 +874,7 @@ td.col--budget:not(:empty)::after {
     .ticket-link {
       margin-left: 10px;
       text-decoration: underline;
+      transform: translateY(-1px);
 
       a {
         color: $dark__link-color;
